# sma-rs

./: .gitignore  Cargo.toml  Makefile  README.md  sma-rs.mq5
.cargo/: config
src/: lib.rs
