[package]
name = "sma-rs"
version = "0.1.0"
authors = ["Takuto Nanjo <16991946+taku-n@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sma_rs"
crate-type = ["cdylib"]

[dependencies]
trta = {git = "https://github.com/taku-n/trta.git"}
libc = "0.2"
